--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,6 +1,10 @@
-<h1>Ask your coach anything</h1>
-
-<form action="/answer" method="get" data-turbo="false">
-  <input type="text" name="question" placeholder="Type your question here">
-  <input type="submit" value="Ask!">
-</form>
+<div class="container">
+  <h1>Stupid Coaching</h1>
+  <p>Ask your coach anything:</p>
+  <form action="/answer" method="get" class="form-inline">
+    <div class="input-group">
+      <input type="text" name="question" class="form-control" placeholder="Ask your coach anything...">
+      <button type="submit" class="btn btn-primary">Ask</button>
+    </div>
+  </form>
+</div>
